solved rightside whitespace and made scroll smooth

--- a/style.css
+++ b/style.css
@@ -18,23 +18,15 @@ font-family: 'Yeseva One', cursive;
 --indian-red: #c1666bff;
 --selective-yellow: #ffbc1fff;
  */
- .fade {
-    height: 300px;
-    width: 300px;
-    background-color: #d15757;
-    color: #fff;
-    padding: 10px;
-}
- html  {
 
-    width: 100%;
-    height: 100%;
+ html  {
+    width: auto;
+    height: auto;
     margin: 0px;
     padding: 0px;
-    overflow-x: hidden; 
-    scroll-behavior: smooth;
-    
-
+    overflow-x: hidden;
+    overflow-y: auto;
+    scroll-behavior: smooth; 
 }
 .body{
     margin: 0;
